...
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <include
                android:id="@+id/recycler_view"
                layout="@layout/common_recycler_view" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <include
            android:id="@+id/error_view"
            layout="@layout/common_error_layout" />
...

        </android.support.v4.widget.SwipeRefreshLayout>

    </ViewFlipper>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_city_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:background="?android:selectableItemBackground"
        app:backgroundTint="@color/accent"
        app:fabSize="normal"
...
