<resources>
    <string name="app_name">Just Weather</string>
    <string name="network_error_text">Can\'t load data</string>
    <string name="removal_current_error_text">You can\'t remove current city</string>
    <string name="retry">Retry</string>
    <string name="empty_default_text">You have no data</string>
    <string name="add_city">Add city</string>
    <string name="city_name">City name</string>
    <string name="current_location">Current Location</string>
</resources>
